--- a/xr-fundamentals/part1/app/src/main/AndroidManifest.xml
+++ b/xr-fundamentals/part1/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-feature android:name="android.software.xr.api.spatial" android:required="false"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
